planning: 更新项目计划和架构设计
- 调整架构模式为基于现有系统扩展 +微信小程序双端架构
- 更改开发模式为模块化渐进式开发
- 优化团队配置和预计工期
- 更新开发阶段总览和各阶段目标- 调整数据库设计和后端业务扩展内容
- 更新前端功能扩展和小程序开发启动任务
- 优化配置和数据库连接配置
- 更新里程碑目标日期和验收标准

--- a/马术俱乐部商品订单管理系统-完整开发清单v2.0.md
+++ b/马术俱乐部商品订单管理系统-完整开发清单v2.0.md
@@ -3,10 +3,10 @@
 ## 📋 项目概览
 
 **项目名称**: 马术俱乐部商品订单管理系统  
-**架构模式**: 后台管理系统 + 微信小程序双端架构  
-**开发模式**: 模块化并行开发  
-**预计工期**: 16-20周  
-**团队配置**: 后端3人 + 前端Web2人 + 小程序2人 + 测试2人 + DevOps1人
+**架构模式**: 基于现有系统扩展 + 微信小程序双端架构  
+**开发模式**: 模块化渐进式开发  
+**预计工期**: 14-18周 (优化后)  
+**团队配置**: 后端2人 + 前端Web1人 + 小程序1人 + 测试1人
 
 ---
 
@@ -54,21 +54,21 @@
 
 ### 开发阶段总览
 
-| 阶段 | 模块 | 工期 | 并行开发 | 关键里程碑 |
+| 阶段 | 模块 | 工期 | 开发重点 | 关键里程碑 |
 |-----|------|------|----------|------------|
-| 第1阶段 | 基础设施 | 3周 | 后端+前端 | 框架搭建+数据库完成 |
-| 第2阶段 | 商品管理 | 4周 | 全团队 | 商品管理模块上线 |
-| 第3阶段 | 支付系统 | 3周 | 后端+小程序 | 微信支付集成完成 |
-| 第4阶段 | 订单预约 | 4周 | 全团队 | 预约下单流程打通 |
-| 第5阶段 | 课表管理 | 3週 | 后端+前端 | 智能排课系统完成 |
-| 第6阶段 | 运营功能 | 2周 | 全团队 | 前台核销+数据统计 |
-| 第7阶段 | 系统优化 | 2周 | 全团队 | 性能优化+稳定性提升 |
+| 第1阶段 | 基础扩展 | 2周 | 数据库+核心服务 | 16张表+核心API完成 |
+| 第2阶段 | 商品管理 | 4周 | 智能表单+动态配置 | 商品管理模块上线 |
+| 第3阶段 | 支付系统 | 3周 | 微信支付集成 | 微信支付集成完成 |
+| 第4阶段 | 订单预约 | 4周 | 自动排课+预约流程 | 预约下单流程打通 |
+| 第5阶段 | 课表管理 | 3週 | 拖拽排课+实时更新 | 智能排课系统完成 |
+| 第6阶段 | 运营功能 | 2周 | 前台核销+数据分析 | 前台核销+数据统计 |
+| 第7阶段 | 系统优化 | 2周 | 性能优化+体验提升 | 性能优化+稳定性提升 |
 
 ---
 
-## 🚀 第一阶段：基础设施建设 (3周)
+## 🚀 第一阶段：基础扩展建设 (2周)
 
-> **目标**: 完成项目框架搭建、数据库设计、基础服务构建
+> **目标**: 基于现有系统架构，扩展商品订单管理相关的数据库表和核心服务
 
 ### 🗄️ 模块1.1：数据库设计与创建 (1周)
 
@@ -96,47 +96,65 @@
 - [ ] **DB_015** 教练可用时间表 (m_coach_availability) `0.5d`
 - [ ] **DB_016** 马匹可用时间表 (m_horse_availability) `0.5d`
 
-### 🏗️ 模块1.2：后端框架搭建 (1周)
+### 🏗️ 模块1.2：后端业务扩展 (1周)
 
-#### 基础架构搭建
-- [ ] **BE_001** Spring Boot 3.x 项目初始化 `1d`
-- [ ] **BE_002** MySQL + MyBatis Plus 配置 `1d`
-- [ ] **BE_003** Redis 缓存配置 `0.5d`
-- [ ] **BE_004** 统一异常处理 + 日志配置 `1d`
-- [ ] **BE_005** API 接口规范制定 `0.5d`
+> **基于现有 Spring Boot 3.3.1 + MyBatis Plus + Sa-Token 架构进行扩展**
 
-#### 核心服务框架
-- [ ] **BE_006** 用户认证授权模块 `1.5d`
-- [ ] **BE_007** 权限控制 RBAC 实现 `1d`
-- [ ] **BE_008** 文件上传服务 `1d`
-- [ ] **BE_009** 消息推送服务框架 `0.5d`
+#### 数据层扩展 (Entity + Mapper)
+- [ ] **BE_001** 创建商品相关Entity (6个实体类) `1d`
+- [ ] **BE_002** 创建订单支付相关Entity (4个实体类+支付表) `1d`
+- [ ] **BE_003** 创建预约课表相关Entity (6个实体类) `1d`
+- [ ] **BE_004** 创建对应Mapper接口 (4个核心Mapper) `0.5d`
 
-### 🎨 模块1.3：前端框架搭建 (0.8周)
+#### 核心业务服务开发
+- [ ] **BE_005** 🆕 微信支付集成服务 `1.5d`
+- [ ] **BE_006** 🆕 动态表单配置服务 `1d`
+- [ ] **BE_007** 🆕 智能排课算法服务 `1.5d`
+- [ ] **BE_008** 🆕 价格计算引擎服务 `1d`
 
-#### 后台管理系统框架
-- [ ] **FE_001** Vue3 + Vite + TypeScript 项目创建 `1d`
-- [ ] **FE_002** Element Plus + 主题配置 `0.5d`
-- [ ] **FE_003** 路由配置 + 权限守卫 `1d`
-- [ ] **FE_004** Pinia 状态管理配置 `0.5d`
-- [ ] **FE_005** Axios 网络请求封装 `0.5d`
-- [ ] **FE_006** 通用组件库搭建 `1d`
+### 🎨 模块1.3：前端功能扩展 (0.8周)
 
-### 📱 模块1.4：小程序框架搭建 (0.8周)
+> **基于现有 Vue 3 + Ant Design Vue + Vite + Pinia 架构进行扩展**
 
-#### 微信小程序基础
-- [ ] **MP_001** 小程序项目创建 + TypeScript 配置 `1d`
-- [ ] **MP_002** Vant Weapp UI 组件库集成 `0.5d`
-- [ ] **MP_003** 网络请求封装 + 拦截器 `1d`
-- [ ] **MP_004** 微信授权登录集成 `1d`
-- [ ] **MP_005** 全局状态管理 `0.5d`
+#### 商品管理页面开发
+- [ ] **FE_001** 🆕 智能商品新增页面 (动态表单) `1.5d`
+- [ ] **FE_002** 🆕 商品列表管理页面 `1d`
+- [ ] **FE_003** 🆕 价格计算器组件 `1d`
 
-### ⚙️ 模块1.5：DevOps 环境搭建 (0.4周)
+#### 课表管理页面开发
+- [ ] **FE_004** 🆕 课表管理主页面 (日/周/月视图) `1.5d`
+- [ ] **FE_005** 🆕 拖拽排课组件 `1d`
+- [ ] **FE_006** 🆕 冲突检测显示组件 `0.5d`
 
-#### 开发运维环境
-- [ ] **OPS_001** Docker 容器化配置 `1d`
-- [ ] **OPS_002** CI/CD 流水线搭建 `1d`
-- [ ] **OPS_003** 开发测试环境部署 `0.5d`
-- [ ] **OPS_004** 监控日志系统配置 `0.5d`
+### 📱 模块1.4：小程序开发启动 (0.8周)
+
+> **基于现有 smart-app 项目进行商品订单模块扩展**
+
+#### 小程序基础页面
+- [ ] **MP_001** 🆕 商品列表页面 `1d`
+- [ ] **MP_002** 🆕 商品详情页面 (动态配置表单) `1.5d`
+- [ ] **MP_003** 🆕 订单确认页面 `1d`
+
+#### 支付集成准备
+- [ ] **MP_004** 🆕 微信支付页面 `1d`
+- [ ] **MP_005** 🆕 支付状态页面 `0.5d`
+- [ ] **MP_006** 🆕 我的预约页面 `1d`
+
+### ⚙️ 模块1.5：配置优化 (0.4周)
+
+> **基于现有部署架构进行商品订单模块配置优化**
+
+#### 数据库连接优化
+- [ ] **OPS_001** 🆕 新增表的数据库连接池配置 `0.5d`
+- [ ] **OPS_002** 🆕 支付相关表的索引优化 `0.5d`
+
+#### 缓存策略配置
+- [ ] **OPS_003** 🆕 商品数据Redis缓存策略 `0.5d`
+- [ ] **OPS_004** 🆕 课表数据实时缓存配置 `0.5d`
+
+#### 微信支付环境配置  
+- [ ] **OPS_005** 🆕 微信支付商户配置 `0.5d`
+- [ ] **OPS_006** 🆕 支付回调URL配置 `0.5d`
 
 ---
 
@@ -376,12 +394,12 @@
 
 | 里程碑 | 目标日期 | 验收标准 | 状态 |
 |--------|----------|----------|------|
-| M1: 基础设施完成 | 第3周结束 | 数据库表+框架搭建+支付表设计完成 | 🟡待开始 |
-| M2: 商品管理上线 | 第7周结束 | 智能表单+商品CRUD+小程序展示完成 | 🟡待开始 |
-| M3: 支付系统上线 | 第10周结束 | 微信支付+退款+数据存储完成 | 🟡待开始 |
-| M4: 下单流程上线 | 第14周结束 | 完整下单+自动排课+预约管理完成 | 🟡待开始 |
-| M5: 课表管理上线 | 第17周结束 | 拖拽排课+实时更新+冲突检测完成 | 🟡待开始 |
-| M6: 系统全面上线 | 第20周结束 | 所有功能完整+性能达标+稳定运行 | 🟡待开始 |
+| M1: 基础扩展完成 | 第2周结束 | 16张数据库表+核心Entity+基础服务完成 | 🟡待开始 |
+| M2: 商品管理上线 | 第6周结束 | 智能表单+商品CRUD+动态配置完成 | 🟡待开始 |
+| M3: 支付系统上线 | 第9周结束 | 微信支付+退款+支付数据存储完成 | 🟡待开始 |
+| M4: 下单流程上线 | 第13周结束 | 完整下单+自动排课+预约管理完成 | 🟡待开始 |
+| M5: 课表管理上线 | 第16周结束 | 拖拽排课+实时更新+冲突检测完成 | 🟡待开始 |
+| M6: 系统全面上线 | 第18周结束 | 所有功能完整+性能达标+稳定运行 | 🟡待开始 |
 
 ### 关键风险控制
 
